[gd_scene load_steps=4 format=3 uid="uid://df0rgb6jbg372"]

[ext_resource type="Script" uid="uid://21vk5px3ym5e" path="res://ui/ui.gd" id="1_nb4k0"]
[ext_resource type="Script" uid="uid://m33kw6by8qs2" path="res://ui/main_ui.gd" id="2_ks8t7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nb4k0"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nb4k0")

[node name="MainUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ks8t7")

[node name="MessageMenu" type="PanelContainer" parent="MainUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -215.0
offset_right = 367.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_nb4k0")

[node name="VBoxContainer" type="VBoxContainer" parent="MainUI/MessageMenu"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainUI/MessageMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainUI/MessageMenu/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainUI/MessageMenu/VBoxContainer"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="MainUI/MessageMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
context_menu_enabled = false
wrap_mode = 1
scroll_fit_content_height = true

[node name="Send" type="Button" parent="MainUI/MessageMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "发送"

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -167.0
offset_right = 133.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PauseMenu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "菜单"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "退出游戏"

[connection signal="focus_entered" from="MainUI/MessageMenu/VBoxContainer/HBoxContainer/TextEdit" to="MainUI" method="_on_text_edit_focus_entered"]
[connection signal="focus_exited" from="MainUI/MessageMenu/VBoxContainer/HBoxContainer/TextEdit" to="MainUI" method="_on_text_edit_focus_exited"]
[connection signal="pressed" from="MainUI/MessageMenu/VBoxContainer/HBoxContainer/Send" to="MainUI" method="_on_send_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
